# hyperliquid_sdk

./: Cargo.toml  README.md
src/: helpers.rs  lib.rs  meta.rs  req.rs
src/exchange/: exchange_client.rs
src/info/: info_client.rs  response_structs.rs  sub_structs.rs
src/ws/: message_types.rs  sub_structs.rs  ws_manager.rs
