[package]
name = "hyperliquid_sdk"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/ChimeWu/hyperliquid_sdk.git"
repository = "https://github.com/ChimeWu/hyperliquid_sdk.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
ethers = {version = "2.0.0", features = ["eip712", "abigen"]}
futures-util = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
lazy_static = "1.3"
log = "0.4.17"
rand = "0.8.5"
reqwest = "0.11"
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"
rmp-serde = "1.0.0"
thiserror = "1.0.0"
tokio = {version = "1.29.1", features = ["full"]}
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
uuid = {version = "1.0.0", features = ["v4"]}
